--- a/trip_planner_front/src/page/common/main.css
+++ b/trip_planner_front/src/page/common/main.css
@@ -87,10 +87,10 @@
 .swiper.inns_slide {position: initial;}
 .inns_slide .swiper-slide{border-radius: 12px; overflow: hidden;}
 .inns_slide .swiper-slide>a{position: relative; display: block; height: 440px}
-.inns_slide .swiper-slide>a::after{content: ""; display: block; position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.0) 80%, rgba(0,0,0,0.2))}
+.inns_slide .swiper-slide>a::after{content: ""; display: block; position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.0) 20%, rgba(0,0,0,0.2))}
 .inns_slide .swiper-slide .inn_info{position: absolute; display: flex; flex-direction: column; left: 0; right: 0; bottom: 0; padding: 20px; z-index: 2;}
 .inns_slide .swiper-slide .inn_info>.partnerName{margin-top: 4px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; color: #fff; font-size: 20px; line-height: 1.5;}
-.inns_slide .swiper-slide .inn_info>.innType{font-size: 14px; line-height: 1.5;}
+.inns_slide .swiper-slide .inn_info>.innType{color: #fff; font-size: 14px; line-height: 1.5;}
 .inns_slide .swiper-slide .inn_info>.reviewRate{margin-top: 4px; padding-left: 20px; color: #fff; font-family: pt-b; font-size: 16px; line-height: 1.5; background: url(/public/images/icon_star.svg) no-repeat left top 5px / 12px;}
 .inns_slide .swiper-slide img{width: 100%; height: 100%; object-fit: cover; object-position: center;}
 .inns_slide .swiper-button-prev{left: -80px; width: 40px; height: 40px; border-radius: 50%; background: rgba(255,255,255,0.6) url(/public/images/icon_arrow_prev_black_40.svg) no-repeat center / contain; box-shadow: 0 0 10px rgba(0,0,0,0.2);}
