--- a/trip_planner_front/src/page/promotion/promotion.css
+++ b/trip_planner_front/src/page/promotion/promotion.css
@@ -178,3 +178,10 @@ td {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.contents.promotionApply .promotion-thumbnail-image>img{
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+}
+
